--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,8 @@
 debug/
 target/
 
+venv/
+
 # Remove Cargo.lock from gitignore if creating an executable, leave it for libraries
 # More information here https://doc.rust-lang.org/cargo/guide/cargo-toml-vs-cargo-lock.html
 Cargo.lock
@@ -15,6 +17,7 @@ Cargo.lock
 
 # Python caches
 __pycache__/
+.pytest_cache/
 
 # Mac OS X files
 .DS_Store
