--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,10 +5,25 @@ build-backend = "maturin"
 [project]
 name = "c2pa-python"
 requires-python = ">=3.7"
+description = "Python bindings for the C2PA Content Authenticity Initiative (CAI) library"
+readme = { file = "README.md", content-type = "text/markdown" }
+license = {file = "LICENSE-MIT"}
+keywords = ["C2PA", "CAI", "content credentials", "metadata", "provenance"]
 classifiers = [
+    "Development Status :: 3 - Alpha",
     "Programming Language :: Rust",
     "Programming Language :: Python :: Implementation :: CPython",
     "Programming Language :: Python :: Implementation :: PyPy",
 ]
+authors = [
+  {name = "Gavin Peacock", email = "gpeacock@adobe.com"}
+]
+maintainers = [
+  {name = "Gavin Peacock", email = "gpeacock@adobe.com"}
+]
+urls = {homepage = "contentauthenticity.org", repository = "github.com/contentauth/c2pa-python"}
 
-
+[project.optional-dependencies]
+test = [
+  "pytest < 5.0.0"
+]
