--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,12 +1,12 @@
 [package]
 name = "c2pa-python"
-version = "0.3.2"
+version = "0.4.0"
 edition = "2021"
 authors = ["Gavin Peacock <gpeacock@adobe.com"]
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 [lib]
-name = "c2pa_python"
+name = "c2pa"
 crate-type = ["cdylib"]
 
 [dependencies]
