--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -30,6 +30,8 @@ jobs:
       - uses: actions/setup-python@v4
         with:
           python-version: "3.10"
+          cache: "pip"
+      - run: pip install -r requirements.txt
       - name: Build wheels
         uses: PyO3/maturin-action@v1
         with:
