--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -36,10 +36,11 @@ jobs:
         uses: PyO3/maturin-action@v1
         with:
           target: ${{ matrix.target }}
-          maturin-version: "1.4.0"
+          maturin-version: "1.2.0"
           args: --release --out dist --find-interpreter
           sccache: "true"
           manylinux: auto
+          before-script-linux: "pip install uniffi-bindgen==0.24.1"
       - name: Upload wheels
         uses: actions/upload-artifact@v3
         with:
