--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -34,6 +34,7 @@ jobs:
       - run: pip install -r requirements.txt
       - name: Setup QEMU
         uses: docker/setup-qemu-action@v1
+        if: ${{ matrix.target == 'aarch64' }}
       - name: Build wheels
         uses: PyO3/maturin-action@v1
         with:
