--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -72,11 +72,8 @@ jobs:
   #         name: wheels
   #         path: dist
 
-  macos:
+  macos_x86:
     runs-on: macos-latest
-    strategy:
-      matrix:
-        target: [x86_64, aarch64]
     steps:
       - uses: actions/checkout@v3
       - uses: actions/setup-python@v4
@@ -84,13 +81,31 @@ jobs:
           python-version: '3.10'
           cache: "pip"
       - run: pip install -r requirements.txt
-      - name: Setup QEMU
-        uses: docker/setup-qemu-action@v1
-        if: ${{ matrix.target == 'aarch64' }}
       - name: Build wheels
         uses: PyO3/maturin-action@v1
         with:
-          target: ${{ matrix.target }}
+          target: x86_64
+          args: --release --out dist --find-interpreter
+          sccache: 'true'
+      - name: Upload wheels
+        uses: actions/upload-artifact@v3
+        with:
+          name: wheels
+          path: dist
+
+  macos_aarch64:
+    runs-on: macos-latest-large
+    steps:
+      - uses: actions/checkout@v3
+      - uses: actions/setup-python@v4
+        with:
+          python-version: '3.10'
+          cache: "pip"
+      - run: pip install -r requirements.txt
+      - name: Build wheels
+        uses: PyO3/maturin-action@v1
+        with:
+          target: aarch64
           args: --release --out dist --find-interpreter
           sccache: 'true'
       - name: Upload wheels
