--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -127,6 +127,7 @@ jobs:
   release:
     name: Release
     runs-on: ubuntu-latest
+    environment: Publish
     if: "startsWith(github.ref, 'refs/tags/')"
     needs: [linux, windows, macos_x86, macos_aarch64, sdist]
     steps:
