--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,8 +10,9 @@ name = "c2pa"
 crate-type = ["cdylib"]
 
 [dependencies]
-c2pa-c = { git = "https://github.com/contentauth/c2pa-c.git", branch = "main" }
-serde = { version = "1.0", features = ["derive"] }
+c2pa = {path="../c2pa-rs/sdk", features = ["file_io", "openssl_sign"]}
+pem = "3.0.3"
+serde = { version = "1.0.197", features = ["derive"] }
 serde_derive = "1.0"
 serde_json = "1.0"
 thiserror = "1.0.49"
