--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,7 +13,7 @@ crate-type = ["cdylib"]
 v1 = ["c2pa/file_io"]
 
 [dependencies]
-c2pa = {git = "https://github.com/contentauth/c2pa-rs.git", branch = "main", features = ["unstable_api", "openssl", "openssl_sign"]}
+c2pa = {version = "0.32.0", features = ["unstable_api", "openssl"]}
 pem = "3.0.3"
 serde = { version = "1.0.197", features = ["derive"] }
 serde_derive = "1.0"
