--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -18,7 +18,9 @@ jobs:
       matrix:
         target: [x86_64, aarch64]
     steps:
-      - run: apt update -y && apt-get install -y libssl-dev
+      - run: |
+          sudo apt update -y
+          sudo apt-get install -y libssl-dev
       - uses: actions/checkout@v3
       - uses: actions/setup-python@v4
         with:
