--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -6,15 +6,15 @@ on:
       - "*"
   workflow_dispatch:
 
-permissions:
-  contents: read
-
 jobs:
+  build:
+    uses: ./.github/workflows/build.yml
+
   release:
     name: Release
     runs-on: ubuntu-latest
     environment: Publish
-    needs: [linux, windows, macos_x86, macos_aarch64, sdist]
+    needs: [build]
     steps:
       - uses: actions/download-artifact@v4
         with:
