working es256k signing!

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,10 +10,11 @@ name = "c2pa"
 crate-type = ["staticlib"]
 
 [dependencies]
-c2pa = { git = "https://git.aquareum.tv/aquareum-tv/c2pa-rs.git", branch = "es256k", features = [
+c2pa = { git = "https://git.aquareum.tv/aquareum-tv/c2pa-rs.git", rev = "ac3a37eb1f51b9498b6b2974bd26ed2a362bf517", features = [
   "unstable_api",
   "openssl",
 ] }
+# c2pa = { path = "../c2pa-rs/sdk", features = ["unstable_api", "openssl"] }
 pem = "3.0.3"
 serde = { version = "1.0.197", features = ["derive"] }
 serde_derive = "1.0"
