fix mp4 signing bug, add tests thereof

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,7 +2,7 @@
 name = "c2pa-go"
 version = "0.5.0"
 edition = "2021"
-authors = ["Gavin Peacock <gpeacock@adobe.com"]
+authors = ["Eli Mallon <eli@aquareum.tv>"]
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 [lib]
@@ -10,11 +10,12 @@ name = "c2pa"
 crate-type = ["staticlib"]
 
 [dependencies]
-c2pa = { git = "https://git.aquareum.tv/aquareum-tv/c2pa-rs.git", rev = "ac3a37eb1f51b9498b6b2974bd26ed2a362bf517", features = [
+c2pa = { git = "https://git.aquareum.tv/aquareum-tv/c2pa-rs.git", rev = "a0b0d3298ae14c4fd71413232eff159cda8d7bcb", features = [
   "unstable_api",
   "openssl",
 ] }
 # c2pa = { path = "../c2pa-rs/sdk", features = ["unstable_api", "openssl"] }
+# c2pa = { version = "0.33.3", features = ["unstable_api", "openssl"] }
 pem = "3.0.3"
 serde = { version = "1.0.197", features = ["derive"] }
 serde_derive = "1.0"
