--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,6 +18,7 @@ serde_derive = "1.0"
 serde_json = "1.0"
 thiserror = "1.0.49"
 uniffi = "0.24.1"
+openssl-src = "=300.3.1+3.3.1"
 
 [build-dependencies]
 uniffi = { version = "0.24.1", features = ["build"] }
