--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -44,7 +44,10 @@ jobs:
             # ISSUE: https://github.com/sfackler/rust-openssl/issues/2036#issuecomment-1724324145
             # If we're running on rhel centos, install needed packages.
             if command -v yum &> /dev/null; then
-                yum update -y && yum install -y perl-core openssl openssl-devel pkgconfig libatomic
+                yum update -y && yum install -y perl-IPC-Cmd rh-perl530 perl-core openssl openssl-devel pkgconfig libatomic
+
+                ldconfig /opt/rh/rh-perl530/root/lib64/
+                export PATH="/opt/rh/rh-perl530/root/bin:$PATH"
 
                 # If we're running on i686 we need to symlink libatomic
                 # in order to build openssl with -latomic flag.
