meson: fix errors when there are spaces in our path

--- a/meson.build
+++ b/meson.build
@@ -21,7 +21,7 @@ c2pa_go_dep = custom_target(
   command: [
     'sh',
     '-c',
-    'cd @2@ && @0@ && cp @3@/release/libc2pa.a @1@/libc2pa.a'.format(cargo_cmd, meson.current_build_dir(), meson.current_source_dir(), archive_dir),
+    'cd "@2@" && @0@ && cp "@3@/release/libc2pa.a" "@1@/libc2pa.a"'.format(cargo_cmd, meson.current_build_dir(), meson.current_source_dir(), archive_dir),
   ],
   build_by_default: true,
 )
