chore: Update to latest maturin/uniffi (#65)
* Makefile

* WIP

* Up maturin

* Up maturin

* WIP

* up

* WIP

* WIP

* Revert name changes

* WIP

* WIP

* Fix version for build

* WIP

* Name change

* Update .gitignore

* Update lib.rs

* Update Makefile

* Reexport Signer

* Fix pyproject build

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,9 +1,9 @@
 [build-system]
-requires = ["maturin>=1.2,<2.0","uniffi_bindgen>=0.24,<0.25"]
+requires = ["maturin>=1.7.4,<2.0","uniffi_bindgen>=0.28,<0.30"]
 build-backend = "maturin"
 
 [project]
-name = "c2pa-python"
+name = "c2pa"
 dependencies = ["cffi"]
 requires-python = ">=3.7"
 description = "Python bindings for the C2PA Content Authenticity Initiative (CAI) library"
