--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,8 +6,7 @@ authors = ["Gavin Peacock <gpeacock@adobe.com"]
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 [lib]
-name = "c2pa"
-crate-type = ["cdylib"]
+crate-type = ["lib", "cdylib"]
 
 [package.metadata.cargo-udeps.ignore]
 normal = ["openssl-src"]
@@ -19,9 +18,9 @@ serde = { version = "1.0.197", features = ["derive"] }
 serde_derive = "1.0"
 serde_json = "1.0"
 thiserror = "1.0.49"
-uniffi = "0.24.1"
+uniffi = "0.28.2"
 openssl-src = "=300.3.1" # Required for openssl-sys
 log = "0.4.21"
 
 [build-dependencies]
-uniffi = { version = "0.24.1", features = ["build"] }
+uniffi = { version = "0.28.2", features = ["build"] }
