--- a/deny.toml
+++ b/deny.toml
@@ -25,16 +25,17 @@ multiple-versions = "allow"
 
 [licenses]
 allow = [
-    "Apache-2.0",
-    "BSD-2-Clause",
-    "BSD-3-Clause",
-    "CC0-1.0",
-    "ISC",
-    "LicenseRef-ring",
-    "MIT",
-    "MPL-2.0",
-    "Unicode-DFS-2016",
-    "Zlib",
+  "Apache-2.0",
+  "BSD-2-Clause",
+  "BSD-3-Clause",
+  "CC0-1.0",
+  "ISC",
+  "LicenseRef-ring",
+  "MIT",
+  "MPL-2.0",
+  "Unicode-DFS-2016",
+  "Unicode-3.0",
+  "Zlib",
 ]
 confidence-threshold = 0.9
 
