Revert "meson: use declare_dependency to bundle include directory"
This reverts commit 1f2771794f97efbf784c9bb15881da6a6f1d0b7b.

--- a/meson.build
+++ b/meson.build
@@ -14,7 +14,7 @@ if triple != ''
   archive_dir += '/' + triple
 endif
 
-libc2pa = custom_target(
+c2pa_go_dep = custom_target(
   'libc2pa',
   input: [],
   output: ['libc2pa.a'],
@@ -24,9 +24,4 @@ libc2pa = custom_target(
     'cd "@2@" && @0@ && cp "@3@/release/libc2pa.a" "@1@/libc2pa.a"'.format(cargo_cmd, meson.current_build_dir(), meson.current_source_dir(), archive_dir),
   ],
   build_by_default: true,
-)
-
-c2pa_go_dep = declare_dependency(
-  link_with: libc2pa,
-  include_directories: include_directories('.'),
 )
