--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,7 +12,7 @@ crate-type = ["lib", "cdylib"]
 normal = ["openssl-src"]
 
 [dependencies]
-c2pa = { version = "0.41.0", features = ["unstable_api", "file_io", "openssl", "pdf", "fetch_remote_manifests"]}
+c2pa = { git = "https://github.com/contentauth/c2pa-rs.git", branch="mathern/python-tradeoffs", features = ["unstable_api", "file_io", "openssl", "pdf", "fetch_remote_manifests"]}
 c2pa-crypto = {version = "0.3.0" }
 thiserror = "1.0.49"
 uniffi = "0.28.2"
