--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,8 +12,8 @@ crate-type = ["lib", "cdylib"]
 normal = ["openssl-src"]
 
 [dependencies]
-c2pa = { git = "https://github.com/contentauth/c2pa-rs.git", branch="mathern/python-tradeoffs", features = ["unstable_api", "file_io", "openssl", "pdf", "fetch_remote_manifests"]}
-c2pa-crypto = {version = "0.3.0" }
+c2pa = { version = "0.41.1", features = ["unstable_api", "file_io", "openssl", "pdf", "fetch_remote_manifests"]}
+c2pa-crypto = {version = "0.3.1" }
 thiserror = "1.0.49"
 uniffi = "0.28.2"
 openssl-src = "=300.3.1" # Required for openssl-sys
