--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,7 +12,7 @@ crate-type = ["lib", "cdylib"]
 normal = ["openssl-src"]
 
 [dependencies]
-c2pa = {  git="https://github.com/contentauth/c2pa-rs", branch="main", features = ["file_io", "openssl", "pdf", "fetch_remote_manifests"]}
+c2pa = { version = "0.44.0", features = ["file_io", "openssl", "pdf", "fetch_remote_manifests"]}
 thiserror = "1.0.49"
 uniffi = "0.28.2"
 openssl-src = "=300.3.1" # Required for openssl-sys
