--- a/deny.toml
+++ b/deny.toml
@@ -20,6 +20,7 @@ ignore = [
     "RUSTSEC-2023-0071", # rsa Marvin Attack: (https://jira.corp.adobe.com/browse/CAI-5104)
     "RUSTSEC-2024-0384", # instant (https://github.com/contentauth/c2pa-rs/issues/663)
     "RUSTSEC-2024-0399", # tokio-rustls server: https://rustsec.org/advisories/RUSTSEC-2024-0399
+    "RUSTSEC-2024-0436", # paste (uniffi update soon)  https://rustsec.org/advisories/RUSTSEC-2024-0436"
 ]
 
 [bans]
