chore: repair publishing process

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -365,15 +365,14 @@ jobs:
     runs-on: ubuntu-latest
     environment: Publish
     needs: [linux, windows, macos_x86, macos_aarch64, sdist]
+    permissions:
+      # IMPORTANT: this permission is mandatory for Trusted Publishing
+      id-token: write
     steps:
       - uses: actions/download-artifact@v4
         with:
           pattern: wheels-*
           name: wheels
       - name: Publish to PyPI
-        uses: PyO3/maturin-action@v1
-        env:
-          MATURIN_PYPI_TOKEN: ${{ secrets.PYPI_API_TOKEN }}
-        with:
-          command: upload
-          args: --non-interactive --skip-existing *
+        uses: pypa/gh-action-pypi-publish@release/v1
+
