--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -363,7 +363,7 @@ jobs:
     if: startsWith(github.ref, 'refs/tags/') || github.event_name == 'workflow_dispatch' && github.event.inputs.publish == 'true'
 
     runs-on: ubuntu-latest
-    environment: Publish
+    environment: publish
     needs: [linux, windows, macos_x86, macos_aarch64, sdist]
     permissions:
       # IMPORTANT: this permission is mandatory for Trusted Publishing
@@ -381,6 +381,4 @@ jobs:
         uses: pypa/gh-action-pypi-publish@release/v1
         with:
           packages_dir: dist
-          username: __token__
-          password: ${{ secrets.PYPI_TOKEN }}
 
