--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -381,4 +381,5 @@ jobs:
         uses: pypa/gh-action-pypi-publish@release/v1
         with:
           packages_dir: dist
+          project: c2pa
 
