--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,4 +1,4 @@
-name: Build
+name: build
 
 on:
   pull_request:
@@ -363,7 +363,7 @@ jobs:
     if: startsWith(github.ref, 'refs/tags/') || github.event_name == 'workflow_dispatch' && github.event.inputs.publish == 'true'
 
     runs-on: ubuntu-latest
-    environment: publish
+    environment: pypipublish
     needs: [linux, windows, macos_x86, macos_aarch64, sdist]
     permissions:
       # IMPORTANT: this permission is mandatory for Trusted Publishing
