fix: Fix logs 2

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -384,6 +384,10 @@ jobs:
           echo "Event name: ${{ github.event_name }}"
       - name: Publish to PyPI
         uses: pypa/gh-action-pypi-publish@release/v1
+        env:
+          TWINE_VERBOSE: 1
+          TWINE_DEBUG: 1
+          PYTHONUNBUFFERED: 1
         with:
           packages-dir: dist
           verbose: true
