--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,7 +3,7 @@ requires = ["maturin>=1.7.4,<2.0","uniffi_bindgen>=0.28,<0.30"]
 build-backend = "maturin"
 
 [project]
-name = "c2pa"
+name = "c2pa-python"
 dependencies = ["cffi"]
 requires-python = ">=3.7"
 description = "Python bindings for the C2PA Content Authenticity Initiative (CAI) library"
@@ -28,3 +28,7 @@ urls = {homepage = "https://contentauthenticity.org", repository = "https://gith
 test = [
   "pytest < 5.0.0"
 ]
+
+[tool.maturin]
+python-source = "c2pa"
+module-name = "c2pa"
