--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -391,4 +391,6 @@ jobs:
         with:
           packages-dir: dist
           verbose: true
+          print-hash: true
+          skip-existing: true
 
