ci: Update setup for publishing (#100)
* chore: repair publishing process

* chore: update release workflow

* chore: yet another publish attempt

* ci: Change setup

* fix: change settings

* fix: Make things verbose

* fix: Debug release

* fix: Deprecation

* fix: Rename env

* fix: Clean up

* fix: Logs

* fix: Different name

* fix: Fix logs

* fix: Fix logs 2

* fix: Fix logs 2

* fix: Fix namings

* fix: Fix namings 2

* fix: Skip existing

* fix: Version bump

* fix: Revert version number change

* fix: Naming

* fix: Remove debug code

* fix: skip existing set back to true

* fix: Bump version

---------

Co-authored-by: Gavin Peacock <gpeacock@adobe.com>

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -359,21 +359,28 @@ jobs:
 
   release:
     name: Release
-
     if: startsWith(github.ref, 'refs/tags/') || github.event_name == 'workflow_dispatch' && github.event.inputs.publish == 'true'
-
     runs-on: ubuntu-latest
-    environment: Publish
+    environment: pypipublish
     needs: [linux, windows, macos_x86, macos_aarch64, sdist]
+    permissions:
+      id-token: write
+      contents: read
     steps:
+      - uses: actions/checkout@v4
       - uses: actions/download-artifact@v4
         with:
           pattern: wheels-*
-          name: wheels
+          path: dist
+          merge-multiple: true
+      - name: List contents of dist directory
+        run: ls -la dist/
       - name: Publish to PyPI
-        uses: PyO3/maturin-action@v1
-        env:
-          MATURIN_PYPI_TOKEN: ${{ secrets.caipypi }}
+        uses: pypa/gh-action-pypi-publish@release/v1
         with:
-          command: upload
-          args: --non-interactive --skip-existing *
+          packages-dir: dist
+          # verbose: true
+          # print-hash: true
+          # Uncomment below for test runs, otherwise fails on existing packages being reuploaded
+          skip-existing: true
+
