--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,9 @@
-maturin==1.7.4
-uniffi-bindgen==0.28.0
-cryptography==44.0.0
-pytest==8.3.4
+
+wheel==0.41.2  # For building wheels
+setuptools==68.0.0  # For building packages
+# Testing dependencies
+pytest==7.4.0 
+ # only used in the training example
+cryptography>=41.0.0 
+# for downloading the library artifacts
+requests>=2.0.0
