fix: Simplify build (#107)
* fix: Some renaming going on

* fix: Format

* fix: Add scripts to debug builds, and clean env

* fix: gitgnore

* fix: Update makefile comments

* fix: verbose debug logs

* fix: Only keep the scripts we need

* fix: Improve makefile

--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,7 @@ __pycache__/
 *$py.class
 
 /artifacts
+scripts/artifacts
 
 
 # C extensions
@@ -108,3 +109,4 @@ target/
 *.dylib
 *.dll
 *.so
+src/c2pa/libs/
