--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,8 @@
 
 wheel==0.41.2  # For building wheels
 setuptools==68.0.0  # For building packages
+toml ==0.10.2  # For reading pyproject.toml files
+
 # Testing dependencies
 pytest==7.4.0 
  # only used in the training example
