--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -52,6 +52,7 @@ jobs:
       - run: python -m pip install -r requirements.txt
       - run: python -m pip install pytest
       - run: pytest
+
   linux:
     runs-on: ubuntu-latest
 
@@ -71,7 +72,7 @@ jobs:
         with:
           python-version: "3.10"
           cache: "pip"
-      - run: 
+      - run:
           pip install -r requirements.txt
           python setup.py bdist_wheel
 
@@ -102,7 +103,7 @@ jobs:
           python-version: '3.10'
           architecture: ${{ matrix.target }}
           cache: "pip"
-      - run: 
+      - run:
           pip install -r requirements.txt
           python setup.py bdist_wheel
 
@@ -128,7 +129,7 @@ jobs:
         with:
           python-version: '3.10'
           cache: "pip"
-      - run: 
+      - run:
           pip install -r requirements.txt
           python setup.py bdist_wheel
       - name: Upload wheels
@@ -207,12 +208,13 @@ jobs:
           merge-multiple: true
       - name: List contents of dist directory
         run: ls -la dist/
-      - name: Publish to PyPI
+      - name: Publish to TestPyPI
         uses: pypa/gh-action-pypi-publish@release/v1
         with:
           packages-dir: dist
-          # verbose: true
-          # print-hash: true
+          # Uncomment to use TestPyPI
+          repository-url: https://test.pypi.org/legacy/
+          verbose: true
           # Uncomment below for test runs, otherwise fails on existing packages being reuploaded
           skip-existing: true
 
